--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings": {
+    "authorizedDomain": ".tidochplats.se",
+    "clerkUrl": "https://upright-killdeer-60.clerk.accounts.dev"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
