--- a/admin/package.json
+++ b/admin/package.json
@@ -44,6 +44,7 @@
     "eslint-config-next": "15.1.0",
     "orval": "^7.3.0",
     "postcss": "^8",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
