--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "authorizedDomain": "http://localhost:3000"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
