--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AppSettings": {
     "authorizedDomain": ".tidochplats.se",
-    "clerkUrl": "https://upright-killdeer-60.clerk.accounts.dev"
+    "clerkUrl": "https://equipped-grouse-16.clerk.accounts.dev"
   },
   "Logging": {
     "LogLevel": {
