--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "authorizedDomain": ".tidochplats.se",
+    "authorizedDomain": "https://ez-restaurant-admin.vercel.app",
     "clerkUrl": "https://equipped-grouse-16.clerk.accounts.dev"
   },
   "Logging": {
