--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_KEY }}
+      - name: Change ownership of .aspnet directory
+        run: |
+          sudo chown -R wilhelm:wilhelm .aspnet/
 
       - name: Install rsync and Verify Installation
         run: |
