--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           sudo apt-get -y install rsync openssh-client
 
       - name: Deploy Dotnet App
-        run: /usr/bin/rsync -rlDvz --delete --chown=wilhelm:wilhelm ./backend/publish/ wilhelm@172.232.147.147:/var/www/restaurantbackend/
+        run: /usr/bin/rsync -rlDvz --delete ./backend/publish/ wilhelm@172.232.147.147:/var/www/restaurantbackend/
 
       - name: Restart service on CentOS server
         env:
