--- a/admin/package.json
+++ b/admin/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate-endpoints": "orval --config ./orval.config.ts"
+    "ge": "orval --config ./orval.config.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.5",
