--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AppSettings": {
-    "authorizedDomain": "https://ez-restaurant-admin.vercel.app",
-    "clerkUrl": "https://equipped-grouse-16.clerk.accounts.dev"
+    "authorizedDomain": "https://www.ezrest.se/",
+    "clerkUrl": "https://accounts.ezrest.se"
   },
   "Logging": {
     "LogLevel": {
