--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "authorizedDomain": "https://www.ezrest.se/",
+    "authorizedDomain": "https://www.ezrest.se",
     "clerkUrl": "https://accounts.ezrest.se"
   },
   "Logging": {
