--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AppSettings": {
     "authorizedDomain": "https://www.ezrest.se",
-    "clerkUrl": "https://accounts.ezrest.se"
+    "clerkUrl": "https://clerk.ezrest.se"
   },
   "Logging": {
     "LogLevel": {
