--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "AppSettings": {
-    "authorizedDomain": "http://localhost:3000"
+    "authorizedDomain": "http://localhost:3000",
+    "clerkUrl": "https://equipped-grouse-16.clerk.accounts.dev"
   },
   "Logging": {
     "LogLevel": {
