--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,7 @@ jobs:
             echo \"[Service]
             Environment=AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
             Environment=AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            Environment=CLERK_SECRET_KEY=${{ secrets.CLERK_SECRET_KEY }}
             \" > /etc/systemd/system/restaurantbackend.service.d/aws-env.conf
             systemctl daemon-reload
             '
