--- a/admin/package.json
+++ b/admin/package.json
@@ -50,6 +50,7 @@
     "orval": "^7.3.0",
     "postcss": "^8",
     "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
