--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
             Environment=CLERK_SECRET_KEY=${{ secrets.CLERK_SECRET_KEY }}
             Environment=STRIPE_SECRET_KEY=${{ secrets.STRIPE_SECRET_KEY }}
             Environment=VERCEL_TOKEN=${{ secrets.VERCEL_TOKEN }}
+            Environment=SMTP_PASSWORD=${{ secrets.SMTP_PASSWORD }}
             \" > /etc/systemd/system/restaurantbackend.service.d/aws-env.conf
             systemctl daemon-reload
             '
