--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.16.4",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "react": "^19.0.0",
