--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           mkdir -p ~/.ssh
           echo "$SSH_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          scp -o StrictHostKeyChecking=no -r ./backend/publish ec2-user@ec2-13-60-78-69.eu-north-1.compute.amazonaws.com:app
+          rsync -avz -e "ssh -o StrictHostKeyChecking=no" ./backend/publish ec2-user@ec2-13-60-78-69.eu-north-1.compute.amazonaws.com:app
 
       # Step 5: Update environment variables in the systemd service file
       - name: Update environment variables
@@ -68,4 +68,4 @@ jobs:
         run: |
           echo "$SSH_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh -o StrictHostKeyChecking=no ec2-user@ec2-13-60-78-69.eu-north-1.compute.amazonaws.com "sudo systemctl restart backend.service"
+          ssh -o StrictHostKeyChecking=no ec2-user@ec2-13-60-78-69.eu-north-1.compute.amazonaws.com "sudo systemctl daemon-reload && sudo systemctl restart backend.service"
