--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no ec2-user@ec2-13-60-78-69.eu-north-1.compute.amazonaws.com "sudo bash -c '\
           sed -i \"/^Environment=/d\" /etc/systemd/system/backend.service
           sed -i \"/^\[Service\]/a \\
+          Environment=DUMMY=0\\n\\
           Environment=AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID\\n\\
           Environment=AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY\\n\\
           Environment=CLERK_SECRET_KEY=$CLERK_SECRET_KEY\\n\\
