--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,7 @@ jobs:
           STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
           CONNECTION_STRING: ${{ secrets.CONNECTION_STRING }}
         run: |
           echo "$SSH_KEY" > ~/.ssh/id_rsa
@@ -61,6 +62,7 @@ jobs:
           Environment=STRIPE_SECRET_KEY=$STRIPE_SECRET_KEY\\n\\
           Environment=VERCEL_TOKEN=$VERCEL_TOKEN\\n\\
           Environment=SMTP_PASSWORD=$SMTP_PASSWORD\\n\\
+          Environment=GOOGLE_APPLICATION_CREDENTIALS=$GOOGLE_APPLICATION_CREDENTIALS\\n\\
           Environment=CONNECTION_STRING=\\\"$CONNECTION_STRING\\\"\" /etc/systemd/system/backend.service'"
 
       # Step 6: Restart the .NET app on the EC2 instance
