--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Clerk.Net" Version="1.8.0" />
     <PackageReference Include="Clerk.Net.DependencyInjection" Version="1.8.0" />
+    <PackageReference Include="Google.Analytics.Data.V1Beta" Version="2.0.0-beta09" />
+    <PackageReference Include="Google.Apis.AnalyticsReporting.v4" Version="1.68.0.2484" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
