--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,6 @@ jobs:
           STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
           CONNECTION_STRING: ${{ secrets.CONNECTION_STRING }}
         run: |
           echo "$SSH_KEY" > ~/.ssh/id_rsa
@@ -55,14 +54,13 @@ jobs:
           ssh -o StrictHostKeyChecking=no ec2-user@ec2-13-61-21-245.eu-north-1.compute.amazonaws.com "sudo bash -c '\
           sed -i \"/^Environment=/d\" /etc/systemd/system/backend.service
           sed -i \"/^\[Service\]/a \\
-          Environment=DUMMY=0\\n\\
           Environment=AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID\\n\\
           Environment=AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY\\n\\
           Environment=CLERK_SECRET_KEY=$CLERK_SECRET_KEY\\n\\
           Environment=STRIPE_SECRET_KEY=$STRIPE_SECRET_KEY\\n\\
           Environment=VERCEL_TOKEN=$VERCEL_TOKEN\\n\\
           Environment=SMTP_PASSWORD=$SMTP_PASSWORD\\n\\
-          Environment=GOOGLE_APPLICATION_CREDENTIALS=$GOOGLE_APPLICATION_CREDENTIALS\\n\\
+          Environment=GOOGLE_APPLICATION_CREDENTIALS=/home/ec2-user/ezrest-service-account.json\\n\\
           Environment=CONNECTION_STRING=\\\"$CONNECTION_STRING\\\"\" /etc/systemd/system/backend.service'"
 
       # Step 6: Restart the .NET app on the EC2 instance
